smoothed out the rotation animation on double click of order button and made the canvas grow to fit all polaroids when ordered. It's much improved on mobile, although still buggy.

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@ body {
 	margin: 0;
 	font-family: Arial, sans-serif;
 	font-size: 0.85em;
-	background: #303030 url('images/canvas-bg.jpg') no-repeat center top;
+	background: #303030 url('../images/canvas-bg.jpg') no-repeat center top;
 }
 
 a {
@@ -25,7 +25,8 @@ a {
 	color: transparent;
 	margin: 0;
 	padding: 0;
-	background: transparent url('images/sort-button-sprite.png') no-repeat left top;
+	outline: 0;
+	background: transparent url('../images/sort-button-sprite.png') no-repeat left top;
 	cursor: pointer;
 }
 #sort-order {
@@ -59,13 +60,13 @@ a {
 	float: left;
 	height: 22px;
 	width: 25px;
-	background: transparent url('images/search-icon.png') 0 0 no-repeat;
+	background: transparent url('../images/search-icon.png') 0 0 no-repeat;
 }
 #search-field {
 	float: left;
 	height: 20px;
 	width: 100px;
-	background: transparent url('images/search-bg.png') 0 0 repeat;
+	background: transparent url('../images/search-bg.png') 0 0 repeat;
 	position: relative;
 	margin: 0px;
 	border: 0;
@@ -75,11 +76,11 @@ a {
 	float: left;
 	height: 22px;
 	width: 22px;
-	background: transparent url('images/search-end.png') 0 0 no-repeat;
+	background: transparent url('../images/search-end.png') 0 0 no-repeat;
 	cursor: auto;
 }
 #header {
-	background: transparent url('images/header-bg.png') 0 0 repeat;
+	background: transparent url('../images/header-bg.png') 0 0 repeat;
 	position: absolute;
 	top: 0px;
 	right: 0;
@@ -90,12 +91,12 @@ a {
 }
 #intro, #footer {
 	font-family: 'Segoe Print', 'Bradley Hand ITC TT', sans-serif;
-	position: absolute;
 }
 #intro {
-	margin: 8px;
-	top: -1px;
-	left: 18px;
+	position: absolute;
+	margin: 11px;
+	top: 0px;
+	left: 15px;
 }
 #search {
 	margin: 8px;
@@ -109,7 +110,7 @@ a {
 	position: absolute;
 	top: 0;
 	left: 0;
-	background: transparent url('images/info-bg.png') 0 0 repeat;
+	background: transparent url('../images/info-bg.png') 0 0 repeat;
 	color: white;
 	width: 250px;
 	height: 360px;
@@ -133,6 +134,6 @@ a {
 #footer {
 	font-size: 0.8em;
 	color: white;
-	bottom: 6px;
-	right: 10px;
+	float: right;
+	margin: -20px 10px 0 10px;
 }
